# mini-coding-agent

./: .env-example  .gitignore  CLAUDE.md  MEMORY_SYSTEM_DESIGN.md  README.md  pyproject.toml  test_basic_functionality.py  test_ollama.py  todo_list.md  vibe_coding_interview_record.md
REPORTS/: 1.4_code_analysis_report.md  1.5_memory_manager_design_report.md  MEMORY_MANAGER_DESIGN.md  phase1_2_summary_report.md  test_report_20260414_021730.md  交付物检查清单.md  结果.md  错误案例统计.md
results/baseline/: run_summary_baseline.json  task_01_decision_retention_baseline_metrics.json  task_01_decision_retention_baseline_results.json  task_02_noisy_tool_output_baseline_metrics.json  task_02_noisy_tool_output_baseline_results.json  task_03_long_workflow_baseline_results.json
results/with-memory/: run_summary_with-memory.json  task_01_decision_retention_with-memory_results.json  task_02_noisy_tool_output_with-memory_results.json  task_03_long_workflow_with-memory_metrics.json  task_03_long_workflow_with-memory_results.json
versions/: VERSION_MANAGEMENT.md  run_all_tests.py
versions/baseline/: README.md  mini_coding_agent_original.py  test_original.py  verify_original.py
versions/baseline/tests/task_01_decision_retention/: README.md  (+1 more)
versions/tasks/: README.md  eval_memory.py  run_task.py  task_01_decision_retention.json  task_02_noisy_tool_output.json  task_03_long_workflow.json
versions/tasks/results/: comparison.json
versions/tests/: README.md
versions/with-memory/: README.md  memory_manager.py  mini_coding_agent.py  test_agent_integration.py  test_memory_manager.py
(+48 files in other folders)
