[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-coding-agent-deepseek"
version = "0.2.0"
description = "Minimal standalone coding agent backed by DeepSeek API"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.2",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mini-coding-agent = "mini_coding_agent:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.4.4",
]

[tool.setuptools]
py-modules = ["mini_coding_agent"]
